--- a/requirements.txt
+++ b/requirements.txt
@@ -7,6 +7,8 @@ scikit-learn==1.4.1.post1
 scikit-posthocs==0.9.0
 scipy==1.12.0
 seaborn==0.13.2
+
+--find-links https://download.pytorch.org/whl/cu117/torch_stable.html
 torch==2.0.0+cu117
 torchaudio==2.0.1+cu117
 torchvision==0.15.1+cu117
